[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Stages/BossStage/BossStage.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/ForestCurtain.png" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/LevelBG/Forest/10.jpg" type="Texture" id=3]
[ext_resource path="res://Components/PausePanel/PausePanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/ResultPanel/ResultPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Stages/BossStage/TheSerpent/Puzzles/2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Stages/BossStage/TheSerpent/Puzzles/3.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Stages/BossStage/TheSerpent/Puzzles/1.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Curtain/Control/TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -387.5, -580 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Transition"
tracks/0/type = "value"
tracks/0/path = NodePath("Curtain/Control/TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -387.5, -580 ), Vector2( -387.5, -196 ) ]
}

[node name="Level 05" type="Node"]
script = ExtResource( 1 )
set1 = ExtResource( 7 )
set2 = ExtResource( 6 )
set3 = ExtResource( 8 )

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="TextureRect" type="TextureRect" parent="BackgroundLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7

[node name="StageArea" type="Node2D" parent="."]

[node name="PausePanel" parent="." instance=ExtResource( 4 )]
visible = false

[node name="ResultPanel" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Curtain" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Curtain"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="TextureRect" type="TextureRect" parent="Curtain/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -387.5
margin_top = -580.0
margin_right = 387.5
margin_bottom = -188.0
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/Transition = SubResource( 2 )
